Bug 88783 - FTBFS: Clover: src/gallium/state_trackers/clover/llvm/invocation.cpp:335:49: error: no matching function for call to 'llvm::TargetLibraryInfo::TargetLibraryInfo(llvm::Triple)
Summary: FTBFS: Clover: src/gallium/state_trackers/clover/llvm/invocation.cpp:335:49: ...
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-25 12:01 UTC by Kai
Modified: 2015-01-26 16:16 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Full build log of failing build, produced by pbuilder (89.15 KB, application/x-xz)
2015-01-25 12:01 UTC, Kai
Details
Fix build after 226981 (1.08 KB, patch)
2015-01-25 21:13 UTC, Jan Vesely
Details | Splinter Review

Description Kai 2015-01-25 12:01:41 UTC
Created attachment 112793 [details]
Full build log of failing build, produced by pbuilder

With LLVM > r226934 I get the following build error in a clean chroot build environment (pbuilder):
> ../../../../../../src/gallium/state_trackers/clover/llvm/invocation.cpp: In function 'void {anonymous}::optimize(llvm::Module*, unsigned int, const std::vector<llvm::Function*>&)':
> ../../../../../../src/gallium/state_trackers/clover/llvm/invocation.cpp:335:49: error: no matching function for call to 'llvm::TargetLibraryInfo::TargetLibraryInfo(llvm::Triple)'
>              llvm::Triple(mod->getTargetTriple()));
>                                                  ^
> ../../../../../../src/gallium/state_trackers/clover/llvm/invocation.cpp:335:49: note: candidates are:
> In file included from ../../../../../../src/gallium/state_trackers/clover/llvm/invocation.cpp:60:0:
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:785:3: note: llvm::TargetLibraryInfo::TargetLibraryInfo(llvm::TargetLibraryInfo&&)
>    TargetLibraryInfo(TargetLibraryInfo &&TLI) : Impl(TLI.Impl) {}
>    ^
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:785:3: note:   no known conversion for argument 1 from 'llvm::Triple' to 'llvm::TargetLibraryInfo&&'
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:784:3: note: llvm::TargetLibraryInfo::TargetLibraryInfo(const llvm::TargetLibraryInfo&)
>    TargetLibraryInfo(const TargetLibraryInfo &TLI) : Impl(TLI.Impl) {}
>    ^
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:784:3: note:   no known conversion for argument 1 from 'llvm::Triple' to 'const llvm::TargetLibraryInfo&'
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:781:12: note: llvm::TargetLibraryInfo::TargetLibraryInfo(const llvm::TargetLibraryInfoImpl&)
>    explicit TargetLibraryInfo(const TargetLibraryInfoImpl &Impl) : Impl(&Impl) {}
>             ^
> /usr/lib/llvm-3.7/include/llvm/Analysis/TargetLibraryInfo.h:781:12: note:   no known conversion for argument 1 from 'llvm::Triple' to 'const llvm::TargetLibraryInfoImpl&'
> Makefile:857: recipe for target 'llvm/libclllvm_la-invocation.lo' failed
> make[4]: *** [llvm/libclllvm_la-invocation.lo] Error 1

This bug was first reported by Andy Furniss on the mesa-dev list on 2014-01-24 at 15:06 UTC (see <http://thread.gmane.org/gmane.comp.video.mesa3d.devel/93649>). This bug is intended to make it easier for multiple persons to track.

A full build log of the failing build is attached to this report. Let me know, if you need something else.
Comment 1 Kai 2015-01-25 12:30:10 UTC
(In reply to Kai from comment #0)
> With LLVM > r226934 I get the following build error in a clean chroot build

Small clarification: SVN r226934 was my last successful build. I saw the failure with r227016. Somewhere between those two the definition for the method must have changed.
Comment 2 Jan Vesely 2015-01-25 21:13:17 UTC
Created attachment 112818 [details] [review]
Fix build after 226981

(In reply to Kai from comment #1)
> (In reply to Kai from comment #0)
> > With LLVM > r226934 I get the following build error in a clean chroot build
> 
> Small clarification: SVN r226934 was my last successful build. I saw the
> failure with r227016. Somewhere between those two the definition for the
> method must have changed.

The change was introduced in r226981. The attached patch fixes the issue for me.
Comment 3 Jan Vesely 2015-01-26 15:50:57 UTC
Fixed in 9cbb9165b9454ccc7f2a6702ce71bc5cd9faba02

    clover: Fix build with llvm after r226981
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=88783
Comment 4 Kai 2015-01-26 16:16:15 UTC
I can confirm the patch is working with LLVM SVN revision 227082.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.